# PrabhupadaDictionaryCopperSpice

./: .gitignore  LICENSE
Arhive/: PrabhupadaDictionary.bat
Bat/: LogRelease.bat  Lupdate.bat  Lupdate.lst  PrabhupadaArhiv.bat  Release.bat
SQL/: Pamyatka.sql
Source/: CMakeLists.txt  PrabhupadaDictionary.qrc
Source/forms/: QPrabhupadaDictionaryWindow.ui  QPrabhupadaLoginWindow.ui
Source/resources/: PrabhupadaDictionary_CS-CZ.ts  PrabhupadaDictionary_EN-US.ts  PrabhupadaDictionary_ES-ES.qm  PrabhupadaDictionary_ES-ES.ts  PrabhupadaDictionary_PT-BR.qm  PrabhupadaDictionary_PT-BR.ts  PrabhupadaDictionary_RU-RU.qm  PrabhupadaDictionary_RU-RU.ts
Source/resources/Images/: Info.plist
Source/resources/Lang/: PrabhupadaDictionary_CS-CZ.qm  PrabhupadaDictionary_CS-CZ.ts  PrabhupadaDictionary_EN-US.qm  PrabhupadaDictionary_EN-US.ts  PrabhupadaDictionary_ES-ES.ts  PrabhupadaDictionary_PT-BR.qm  PrabhupadaDictionary_PT-BR.ts  PrabhupadaDictionary_RU-RU.ts
Source/src/: CMakeLists.txt  PrabhupadaDictionary_build_info.h.in  PrabhupadaMain.cpp  QPrabhupada.cpp  QPrabhupada.h  QPrabhupadaAboutWindow.cpp  QPrabhupadaAboutWindow.h  QPrabhupadaDictionary.cpp  QPrabhupadaDictionary.h  QPrabhupadaDictionaryWindow.cpp  QPrabhupadaDictionaryWindow.h  QPrabhupadaGoToLineWindow.cpp  QPrabhupadaGoToLineWindow.h  QPrabhupadaLoginWindow.cpp  QPrabhupadaLoginWindow.h  QPrabhupadaUtil.cpp
